cabal-version: 3.0
name:          xmonad-config
version:       0.1.0.0
synopsis:      my XMonad configuration
author:        Pierre Dal-Pra
license:       MIT

executable xmonad-config
  main-is:          config.hs
  default-language: Haskell2010
  hs-source-dirs:   . lib
  build-depends:
    , base            ^>=4.15.1.0
    , dbus            ^>=1.2.0
    , utf8-string     ^>=1.0.0
    , X11             ^>=1.10.0
    , xmonad          ^>=0.17.0
    , xmonad-contrib  ^>=0.17.0
