cabal-version: 3.0
name:          xmonad-config
version:       0.1.0.0
synopsis:      my XMonad configuration
author:        Pierre Dal-Pra
license:       MIT

executable config
  main-is:          config.hs
  default-language: Haskell2010
  hs-source-dirs:   . lib
  ghc-options:      -Wall -Whi-shadowing -Wname-shadowing
  build-depends:
    , base            ^>=4.16.1.0
    , dbus            ^>=1.2.0
    , utf8-string     ^>=1.0.0
    , xmonad          ^>=0.17.0
    , xmonad-contrib  ^>=0.17.0
