cabal-version: 3.0
name:          xmonad-config
version:       0.1.0.0
synopsis:      my XMonad configuration
author:        Pierre Dal-Pra
license:       MIT

executable config
  main-is:          config.hs
  default-language: Haskell2010
  hs-source-dirs:   . lib
  other-modules:
    Bindings
    KeyboardLayout
    Notifications
    Polybar
    Scratchpads
    Terminal
    WindowRules
    Workspaces

  ghc-options:      -Wall -Whi-shadowing -Wname-shadowing
  build-depends:
    , base            ^>=4.18.0
    , dbus            ^>=1.2.0
    , utf8-string     ^>=1.0.0
    , xmonad          ^>=0.18.0
    , xmonad-contrib  ^>=0.18.0
